--- a/parentapp/src/pages/parent/parent.scss
+++ b/parentapp/src/pages/parent/parent.scss
@@ -1,3 +1,10 @@
 page-parent {
-
+  agm-map{
+      height: 200px;
+  }
+  .name{
+    color: red;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
