Finished Design Of Child App
and add only one location

--- a/childapp/src/pages/child/faculty.scss
+++ b/childapp/src/pages/child/faculty.scss
@@ -2,4 +2,23 @@ page-faculty {
     agm-map{
         height: 300px;
     }
+    // ion-nav{
+    //     color: white !important;
+    //     background-color: #000;
+    // }
+    .item-avatar  {     
+        width:100% !important;  
+        height : 100% !important;  
+        max-width: 100% !important;
+        max-height: 288px !important;
+        }
+        .item-avatar img{
+        width:100% !important;  
+        height : 288px !important;  
+        max-width: 100% !important;
+        max-height: 288px !important; 
+        }
+        button{
+            color: #222222 !important;
+        }
 }
